# promtext-cli

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.forgejo/workflows/: commitlint.yaml  lint.yaml  publish.yaml  test.yaml
.github/workflows/: lint.yaml  publish.yaml
promtext_cli/: main.py  promtext.py
tests/: test_blackbox.py  test_functional.py
