[project]
name = "promtext-cli"
description = "Prometheus Textfile Tooling"
authors = [{name = "Vanessa Gaube", email = "dev@vanessagaube.de"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "prometheus_client"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[project.urls]
Documentation = "https://codeberg.org/margau/promtext-cli/src/branch/main#readme"
Issues = "https://codeberg.org/margau/promtext-cli/issues"
Source = "https://codeberg.org/margau/promtext-cli.git"

# Scripts
[project.scripts]
promtext = "promtext_cli.main:promtext"


# Dev Dependencies
[tool.uv]
dev-dependencies = [
  "ruff",
  "pylint",
]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

# TODO: Dev/CI scripts for lint & co.