[project]
name = "promtext-cli"
description = "Prometheus Textfile Tooling"
authors = [{name = "Vanessa Gaube", email = "dev@vanessagaube.de"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "prometheus_client"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"


[project.urls]
Documentation = "https://codeberg.org/margau/promtext-cli/src/branch/main#readme"
Issues = "https://codeberg.org/margau/promtext-cli/issues"
Source = "https://codeberg.org/margau/promtext-cli.git"

# Scripts
[project.scripts]
promtext = "promtext_cli:main.main"

[dependency-groups]
dev = [
  "ruff==0.15.21",
  "pylint==4.0.6",
  "pytest==9.1.1",
  "coverage==7.15.1",
  "cli-test-helpers==4.2.0",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.coverage.run]
source = ["promtext_cli", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D104",
    "D107",
    "D200",
    "D203",
    "D205",
    "D213",
    "D400",
    "D401",
    "D415", # TODO: Remove later
    "FIX002", # TODO: Remove later
    "TD002", # TODO: Remove later
    "TD003", # TODO: Remove later
    "ANN", # TODO: Remove later
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "INP001", "PLR2004"]

# TODO: Dev/CI scripts for lint & co.
